RESOLVED FIXED162348
New DocumentLoader logging causes crashes
https://bugs.webkit.org/show_bug.cgi?id=162348
Summary New DocumentLoader logging causes crashes
Keith Rollin
Reported 2016-09-21 10:29:41 PDT
<rdar://problem/28404744> Application Specific Information: CRASHING TEST: contentfiltering/block-after-will-send-request-then-allow-unblock.html Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.WebCore 0x0000000110340967 WebCore::DocumentLoader::startLoadingMainResource() + 1159 1 com.apple.WebCore 0x00000001108fd0b0 WebCore::FrameLoader::continueLoadAfterNavigationPolicy(...) + 1312 ... Likely due to accessing m_frame without checking to see if it's nullptr. For instance, this seems particularly ill-advised: if (!m_frame || m_request.isNull()) { RELEASE_LOG_IF_ALLOWED("startLoadingMainResource: Load canceled after willSendRequest (frame = %p, main = %d)", m_frame, m_frame->isMainFrame()); return; } If this is the case, this is a regression caused by Bug 162237.
Attachments
Patch (2.20 KB, patch)
2016-09-21 11:37 PDT, Keith Rollin
no flags
Keith Rollin
Comment 1 2016-09-21 11:37:42 PDT
Chris Dumez
Comment 2 2016-09-21 11:43:22 PDT
Comment on attachment 289470 [details] Patch Clearing flags on attachment: 289470 Committed r206224: <http://trac.webkit.org/changeset/206224>
Chris Dumez
Comment 3 2016-09-21 11:43:25 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.