New DocumentLoader logging causes crashes https://bugs.webkit.org/show_bug.cgi?id=162348 <rdar://problem/28404744>

Patch by Keith Rollin <krollin@apple.com> on 2016-09-21
Reviewed by Chris Dumez

Check for NULL m_frame before using it.

No new tests -- no tests for logging, though this issue was found by
contentfiltering/block-after-will-send-request-then-allow-unblock.html

* loader/DocumentLoader.cpp:
(WebCore::DocumentLoader::startLoadingMainResource):

Canonical link: https://commits.webkit.org/180372@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206224 268f45cc-cd09-0410-ab3c-d52691b4dbfc